<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="#CCCCCC"
    android:id="@+id/RootLayout">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
         >
<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/EditBlock"
        android:layout_margin="4dp"
        android:background="#ffffffff">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/linearLayout"
            android:background="#ffffffff"
            android:layout_margin="5dp">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/block_row1">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textColor="@color/mainColor"
                    android:text="@string/tv_vocab"
                    android:gravity="bottom"
                    android:padding="3dp"
                    />
                <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/edt_addword"
                    android:inputType="text"
                    android:lines="1"
                    android:hint="@string/hint_vocab" />
            </LinearLayout>

            <LinearLayout

                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/block_row2"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
        android:textColor="@color/mainColor"
                    android:text="@string/tv_vocabb"
                    android:gravity="bottom"
                    android:padding="3dp" />
                <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/edt_addtermino"
                    android:inputType="text"
                    android:hint="@string/hint_vocabb" />
            </LinearLayout>

            <LinearLayout

                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/block_row3"

                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textSize="15sp"
                    android:textColor="@color/mainColor"
                    android:text="@string/tv_vocabbb"
                    android:gravity="bottom"
                    android:padding="3dp" />
                <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/edt_words"
                    android:hint="@string/hint_vacabbb"

                    android:inputType="text" />
            </LinearLayout>

            <LinearLayout

                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/block_row4"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
android:textColor="@color/mainColor"
                    android:text="@string/tv_vocab_cate"
                    android:gravity="center_vertical"
                    android:padding="3dp" />
                <Spinner
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/spn_cate_vocab" />
            </LinearLayout>

            <LinearLayout

                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:weightSum="1"
                android:gravity="center">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_save_vocab"
                    android:id="@+id/btn_save_vo"
                    android:background="@drawable/button"
                    android:padding="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginBottom="5dp" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_cls_vocab"
                    android:id="@+id/btn_clear_vo"
                    android:background="@drawable/button"
                    android:padding="10dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp" />
            </LinearLayout>
        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#ffffffff"
        android:id="@+id/CatBlock"
        android:layout_margin="4dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="3dp"
                android:id="@+id/Block_r1"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/add_tv_cat"
                    android:id="@+id/textView6"
                    android:textColor="@color/mainColor"
                    android:gravity="bottom"
                    android:padding="3dp" />

                <Button
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:id="@+id/btnn"
                    android:layout_gravity="bottom"
                    android:paddingRight="10dp" />

                <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/edt_cate_cate"
                    android:inputType="text"
                    android:hint="@string/hint_cate"/>

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/Block_r2">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/tv_cat"
                    android:textColor="@color/mainColor"
                    android:id="@+id/textView4"
                    android:gravity="center_vertical"
                    android:padding="3dp" />

                <Spinner
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/spn_categories" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_save_cat"
                    android:id="@+id/btn_save_cat"
                    android:background="@drawable/button"
                    android:padding="10dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_cls_cat"
                    android:id="@+id/btn_clear_cat"
                    android:background="@drawable/button"
                    android:padding="10dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
    </ScrollView>

</RelativeLayout>

